# OpenPhase-Aachto

./: .gitignore  CMakeLists.txt  GRAIN_HDF5_INTEGRATION.md  Makefile  Makefile.defs
documentation/ReferenceManual/html/: annotated.html  classes.html  dir_0e77b8ebe6378208e2befe9c02b5e839.html  dir_16f1f10096c8e9010120b5c86c0ff8bd.html  dir_1bc61ce84f0c80a9b26de2557d479679.html  dir_24b0c78c4d704f5cdd4df86651e34fd7.html  dir_38dcc008f27e8551750d15cff1cfdc27.html  dir_434bf685ef10b9139d2d8d07d0dc5138.html  dir_5c9f1591a52c292c8d7fad55c43064f7.html  dir_626f7203e2ad0855914f7f551e51f9a0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69ecd2c4fb18f85e6e75b953294c93f5.html  dir_b14e4f0394ba62ba0dda4584c6111f4e.html  dir_b90d73d79b67ccd72c2aaf78972ad885.html  dir_b9a3208c0ac902034cc3958de86aedaa.html  dir_c8639bdf42c9d2f95a11805e9793e6ff.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_de8b85321100b73b7427b3a6d74391a6.html  dir_e378baa8d587564728b7986d6e7c1141.html  dir_ebb84a8e24f67c35874c2406b80103f1.html  dir_ee89108fb8ed944d1e475c8f9920e480.html  dir_f67ca4a3ad80bb9f589f6c6c1389efd0.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  (+82 more)
documentation/ReferenceManual/html/d0/d0a/: classopenphase_1_1Stabilization.html
documentation/ReferenceManual/html/d0/d0b/: D3Q27_8h.html  D3Q27_8h_source.html
documentation/ReferenceManual/html/d0/d18/: classopenphase_1_1PackCaller3D_3_01A_00_01T_00_01typename_01std_1_1enable__if_3_01std_1_1is__cla26af72c1848d3af0d865bf170f44162e.html
documentation/ReferenceManual/html/d0/d1a/: GrandPotentialDensity_8h.html  GrandPotentialDensity_8h_source.html
documentation/ReferenceManual/html/d0/d1b/: structopenphase_1_1DoubleIndexFieldEntry-members.html
documentation/ReferenceManual/html/d0/d1e/: structopenphase_1_1VanDerWaalsGas_1_1EquilibriumValues__t-members.html
documentation/ReferenceManual/html/d0/d21/: classopenphase_1_1MassDensity-members.html
documentation/ReferenceManual/html/d0/d2a/: EquilibriumPartitionDiffusionBinary_8cpp.html  EquilibriumPartitionDiffusionBinary_8cpp_source.html
documentation/ReferenceManual/html/d0/d37/: classopenphase_1_1EnergyTransport-members.html
documentation/ReferenceManual/html/d0/d48/: classopenphase_1_1PackCaller3D_3_01A_00_01T_00_01typename_01std_1_1enable__if_3_9std_1_1is__clasf5cd31e1cdc1e87264c02467c9e19bdd.html
documentation/ReferenceManual/html/d0/d4c/: classtinyxml2_1_1XMLUnknown.html
documentation/ReferenceManual/html/d0/d4d/: BoundaryConditions_8h.html  BoundaryConditions_8h_source.html
documentation/ReferenceManual/html/d0/d50/: structopenphase_1_1BenziGas-members.html
documentation/ReferenceManual/html/d0/d6a/: classopenphase_1_1FileInterface-members.html
documentation/ReferenceManual/html/d0/d6c/: namespaceopenphase.html
documentation/ReferenceManual/html/d0/d82/: InterfaceProperties_8cpp.html  InterfaceProperties_8cpp_source.html
documentation/ReferenceManual/html/d0/d88/: Orientations_8h.html  (+1 more)
documentation/ReferenceManual/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+148 more)
documentation/ReferenceManual/latex/: annotated.tex  dir_0e77b8ebe6378208e2befe9c02b5e839.tex  dir_16f1f10096c8e9010120b5c86c0ff8bd.tex  dir_1bc61ce84f0c80a9b26de2557d479679.tex  dir_24b0c78c4d704f5cdd4df86651e34fd7.tex  dir_38dcc008f27e8551750d15cff1cfdc27.tex  dir_434bf685ef10b9139d2d8d07d0dc5138.tex  dir_5c9f1591a52c292c8d7fad55c43064f7.tex  dir_626f7203e2ad0855914f7f551e51f9a0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_69ecd2c4fb18f85e6e75b953294c93f5.tex  dir_b14e4f0394ba62ba0dda4584c6111f4e.tex  dir_b90d73d79b67ccd72c2aaf78972ad885.tex  dir_b9a3208c0ac902034cc3958de86aedaa.tex  dir_c8639bdf42c9d2f95a11805e9793e6ff.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_de8b85321100b73b7427b3a6d74391a6.tex  dir_e378baa8d587564728b7986d6e7c1141.tex  dir_ebb84a8e24f67c35874c2406b80103f1.tex  dir_ee89108fb8ed944d1e475c8f9920e480.tex  dir_f67ca4a3ad80bb9f589f6c6c1389efd0.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
examples/AdditiveNiAl/: AdditiveNiAl
examples/EutecticII/: EutecticII
examples/FacetedGG/: FacetedGG
examples/Flow/: Flow
examples/Foam/: Foam
examples/HeatDiffusion/: HeatDiffusion
examples/LatentHeat/: LatentHeat
examples/LiquidPhaseSintering/: LiquidPhaseSintering
examples/LiquidPhaseSinteringLarge/: LiquidPhaseSinteringLarge
examples/MeltingFe/: MeltingFe
examples/NormalGG/: Makefile  NormalGG  NormalGG.cpp  ProjectInput.opi  edge_index.py  example_ml_usage.py  test.py  test_edge_index.py
examples/Pearlite/: Pearlite
examples/Plagioclase/: Plagioclase
examples/PrecipitationNiTi/: PrecipitationNiTi
examples/SolidPhaseSintering/: SolidPhaseSintering
examples/SolidPhaseSintering_SurfaceDiffusion/: SolidPhaseSintering
examples/SolidificationFe/: SolidificationFe
examples/SolidificationFeC/: SolidificationFeC
examples/SolidificationMgAl/: SolidificationMgAl  SolidificationMgAldendrite
examples/SolidificationNiAl/: SolidificationNiAl
examples/Superalloys/: Superalloys
examples/Wetting/: Wetting
include/: BuildInfo.h  ConsoleOutput.h  DrivingForce.h  H5Interface.h  Settings.h
include/Tools/: MicrostructureAnalysis.h
src/: ConsoleOutput.cpp  DrivingForce.cpp  H5Interface.cpp  Nucleation.cpp  PhaseField.cpp  Settings.cpp  Temperature.cpp
src/Tools/: MicrostructureAnalysis.cpp
(+1416 files in other folders)
